2006-10-10  Inge Wallin  <ingwa@dhcp-254-139.lkpg.cendio.se>

	* kchart_params.cc (saveOasisAxis): Add saving of axis titles.

2006-10-06  ----  Version 1.6.0 tagged  ----

2006-10-03  Inge Wallin  <inge@lysator.liu.se>

	* kchart_params.cc (loadOasisPlotarea): Fix bug.  Pie charts use
	only the y axis, not only the x axis.

2006-09-28  Inge Wallin  <inge@lysator.liu.se>

	* kchart_params.cc (loadOasisPlotarea): Add support for
	chart:series-source (row or column):

2006-07-18  Inge Wallin  <inge@lysator.liu.se>

	Clean up the data editor and fix bug 129553: kchart: crash / heavy
	load with Row=0 in KChart Data Editor
	* kchartDataEditor.{h,cc} (currentChanged): New method
	(m_insertRowButton, m_removeRowButton, m_insertRowButton,
	  m_removeRowButton): New members
	* kchartDataEditor.cc (removeCurrentRow, removeCurrentCol): Don't
	allow to remove a row or column if it's the first column or if
	there are only 2 of them.

	Some small cleaning.
	
2006-07-17  Inge Wallin  <inge@lysator.liu.se>

	Add "first row/col as legend" checkboxes to data editor.
	* kchartDataEditor.cc (kchartDataEditor): Enable existing code
	* kchartDataEditor.cc (setData): Enable existing code
	* kchartDataEditor.cc (getData): Enable existing code

	Simplify paintContent():
	* kchart_part.{h,cc} (createLabelsAndLegend): New function
	(paintContent): call createLabelsAndLegend

	================================================================
	KChart 1.5 released

	<There are a lot of missed entries here.>

	
2005-09-15  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 108770: [PATCH] kchart should have a format menu
	* kchart.rc (Format): New menu
	(KChartTypes toolbar): place to the left
	* kchart_view.cc (KChartView::KChartView): change strings for some
	actions.

2005-08-08  Inge Wallin  <inge@lysator.liu.se>

	Code cleaning.
	* kchartWizard.{h,cc}: cleaning

2005-07-28  Inge Wallin  <inge@lysator.liu.se>

	Fix bug 108461: Bug in generation of HiLo charts